<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="8dp"
    android:clickable="true"
    android:backgroundTint="@color/colorAccent"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/itemshape"
        android:padding="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_title"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/popis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="10dp"
            android:text="@string/popis" />

        <TextView
            android:id="@+id/datum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/popis"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:text="@string/datum" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
